--- a/.homelab-template.yaml
+++ b/.homelab-template.yaml
@@ -1,4 +1,4 @@
-_commit: v1.6.15-1-ge6a6893
+_commit: v1.6.17
 _src_path: /home/crthomas/code/charlesthomas/homelab-template
 additionalResources: ''
 backups: false
