--- a/.homelab-template.yaml
+++ b/.homelab-template.yaml
@@ -14,7 +14,7 @@ labels: |-
   app.kubernetes.io/instance: external-dns-cloudflare
   app.kubernetes.io/name: cloudflare
 name: external-dns-cloudflare
-namespace: external-dns
+namespace: external-dns-cloudflare
 pvc: false
 reloader: true
 resources:
