--- a/external-dns-cloudflare-argocd-application.yaml
+++ b/external-dns-cloudflare-argocd-application.yaml
@@ -14,7 +14,7 @@ spec:
     targetRevision: HEAD
   destination:
     server: https://kubernetes.default.svc
-    namespace: external-dns
+    namespace: external-dns-cloudflare
   syncPolicy:
     automated:
       prune: true
