--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -10,6 +10,7 @@ commonLabels:
   app.kubernetes.io/name: cloudflare
 
 resources:
+- resources/external-secrets.yaml
 - resources/namespaces.yaml
 patches:
 - patch: |-
