--- a/.homelab-template.yaml
+++ b/.homelab-template.yaml
@@ -1,4 +1,4 @@
-_commit: v1.6.17
+_commit: v1.8.1
 _src_path: /home/crthomas/code/charlesthomas/homelab-template
 additionalResources: ''
 backups: false
@@ -9,6 +9,9 @@ helmRelease: external-dns-cloudflare
 helmRepo: https://kubernetes-sigs.github.io/external-dns/
 helmValues: helm/values.yaml
 helmVersion: ''
+homepageEnabled: true
+ingHost: external-dns-cloudflare.crt.house
+ingName: external-dns-cloudflare
 ingress: false
 labels: |-
   app.kubernetes.io/instance: external-dns-cloudflare
