fix: argocd ssa

--- a/resources/external-secrets.yaml
+++ b/resources/external-secrets.yaml
@@ -11,7 +11,10 @@ spec:
   data:
     - secretKey: api-key
       remoteRef:
+        conversionStrategy: Default
+        decodingStrategy: None
         key: add0d418-949a-4bda-b535-52055706665e
+        metadataPolicy: None
         property: api-key
       sourceRef:
         storeRef:
