fix: migrate off helm chart

--- a/kustomization.yaml
+++ b/kustomization.yaml
@@ -10,8 +10,13 @@ commonLabels:
   app.kubernetes.io/name: cloudflare
 
 resources:
+- resources/deployments.yaml
 - resources/external-secrets.yaml
 - resources/namespaces.yaml
+- resources/rbac.yaml
+- resources/service-accounts.yaml
+- resources/services.yaml
+
 patches:
 - patch: |-
     apiVersion: apps/v1
@@ -23,9 +28,3 @@ patches:
         reloader.stakater.com/auto: "true"
   target:
     kind: Deployment
-helmCharts:
-- name: external-dns
-  namespace: external-dns-cloudflare
-  releaseName: external-dns-cloudflare
-  repo: https://kubernetes-sigs.github.io/external-dns/
-  valuesFile: helm/values.yaml
