--- a/resources/rbac.yaml
+++ b/resources/rbac.yaml
@@ -42,6 +42,14 @@ rules:
       - get
       - watch
       - list
+  - apiGroups:
+    - discovery.k8s.io
+    resources:
+    - endpointslices
+    verbs:
+    - get
+    - watch
+    - list
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
